Menambahkan required pada code HTML
Menambahkan required ke tag input html

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                         
                             <div class="form-control">
                                 <label for="tugas">Masukkan hal yang harus di lakukan</label><br>
-                                <input id="tugas" type="text" name="tugas" placeholder="contoh back end">
+                                <input id="tugas" type="text" name="tugas" placeholder="contoh back end" required>
                             </div>
 
                             <div class="form-control">
                                 <label for="tanggal">Masukkan tanggal harus selesai</label><br>
-                                <input type="date" name="tanggal" id="tanggal">
+                                <input type="date" name="tanggal" id="tanggal" required>
                             </div>
 
                             <div class="form-control">
